Added 1st project

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
         <h2 class="text-center">About Me</h2>
         <div class="row">
           <div class="col-md-6 text-center about-info">
-            <img class="img-circle text-center profile-img" src="https://placekitten.com/g/150/150">
+            <img class="img-circle text-center profile-img" src="img/Square-Ireland.png">
             <p class="text-center">I'm a self taught web developer from Scottsdale, AZ. I'm currently learning with FreeCodeCamp and Treehouse, ...Cat ipsum dolor sit amet, stare at ceiling ignore the squirrels, you'll never catch them anyway get video posted to internet for chasing red dot. Drink water out of the faucet shake treat bag, so meowwww. </p>
           </div>
           <div class="col-md-6 about-tools">
@@ -77,6 +77,7 @@
                   <li>HTML5</li>
                   <li>CSS3</li>
                   <li>Javascript</li>
+                  <li>Bootstrap</li>
                 </ul>
               </div>
               <div class="col-xs-6">
@@ -104,12 +105,13 @@
             <div class="col-lg-6"> <!--1st side project -->
               <div class="row"> 
                 <div class="col-sm-5 text-center">
-                  <h4 class="portfolio-projects--title">Project Name</h4>
-                  <p class="portfolio-projects--desc">Short Description of Project</p>
+                  <h4 class="portfolio-projects--title">Earth Quotes</h4>
+                  <p class="portfolio-projects--desc">Random quotes shown over google earth images</p>
+                  <p class="portfolio-projects--desc">Uses: Javascript, JQuery, Bootstrap</p>
                   <button class="btn btn-rounded portfolio-projects--btn">View Project</button>
                 </div>
                 <div class="col-sm-7 text-center">
-                  <img class="img-rounded portfolio-projects--image" src="https://placekitten.com/g/350/250">
+                  <img class="portfolio-projects--image" src="img/slice-quotes.png">
                 </div>
               </div>
             </div>
@@ -164,12 +166,12 @@
         <div class="text-center contact-social-icons">
           <p>Or find me on:</p>
           <ul class="centered">
-            <li><i class="fa fa-codepen"></i> CodePen</li>
-            <li><i class="fa fa-linkedin-square"></i> LinkedIn</li>
-            <li><i class="fa fa-github"></i> Github</li>
-            <li>FreeCodeCamp</li>
-            <li><i class="fa fa-twitter"></i> Twitter</li>
-            <li><i class="fa fa-instagram"></i> Instagram</li>
+            <a href="http://codepen.io/sonorangirl/"><li><i class="fa fa-codepen"></i> CodePen</li></a>
+            <a href="https://www.linkedin.com/in/emanahan"><li><i class="fa fa-linkedin-square"></i> LinkedIn</li></a>
+            <a href="https://github.com/sonorangirl"><li><i class="fa fa-github"></i> Github</li></a>
+            <a href="http://freecodecamp.com/sonorangirl"><li>(<i class="fa fa-fire"></i>) FreeCodeCamp</li></a>
+            <a href="https://twitter.com/sonoran_girl"><li><i class="fa fa-twitter"></i> Twitter</li></a>
+            <!-- <li><i class="fa fa-instagram"></i> Instagram</li> -->
           </ul>
         </p>
         
