Added new portfolio projects

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 
             <img class="img-circle text-center profile-img" src="img/Square-Ireland.png">
 
-            <p class="text-center">I'm a self taught web developer from Scottsdale, AZ. I'm currently learning with FreeCodeCamp and Treehouse, ...Cat ipsum dolor sit amet, stare at ceiling ignore the squirrels, you'll never catch them anyway get video posted to internet for chasing red dot. Drink water out of the faucet shake treat bag, so meowwww. </p>
+            <p class="text-center">I'm a self taught web developer from Scottsdale, AZ. I'm currently learning Javascript development with FreeCodeCamp and Team Treehouse. I also have degrees in Biology and Sustainability and would love to do interactive data visualizations in the future and put what I'm learning to good use. But for now I'm having fun learning to be a developer!</p>
           </div>
           <div class="col-md-6 about-tools">
             <p class="text-center">Here's a few of the tools I use</p>
@@ -80,6 +80,7 @@
                   <li>CSS3</li>
                   <li>Javascript</li>
                   <li>Bootstrap</li>
+                  <li>Foundation</li>
                 </ul>
               </div>
               <div class="col-xs-6">
@@ -88,6 +89,7 @@
                   <li>Sass</li>
                   <li>Git</li>
                   <li>WordPress</li>
+                  <li>PHP</li>
                 </ul>
               </div>
             
@@ -110,7 +112,7 @@
                   <h4 class="portfolio-projects--title">Earth Quotes</h4>
                   <p class="portfolio-projects--desc">Random quotes shown over google earth images</p>
                   <p class="portfolio-projects--desc">Uses: Javascript, JQuery, Bootstrap</p>
-                  <button class="btn btn-rounded portfolio-projects--btn">View Project</button>
+                  <a class="btn btn-rounded portfolio-projects--btn" href="http://sonorangirl.github.io/Earth-Quotes/#" role="button">View Project</a>
                 </div>
                 <div class="col-sm-7 text-center">
                   <img class="portfolio-projects--image" src="img/slice-quotes.png">
@@ -120,12 +122,13 @@
             <div class="col-lg-6"> <!--2nd side project -->
               <div class="row"> 
                 <div class="col-sm-5 text-center pull-right-sm"><!--flipped on small, unflipped on large-->
-                  <h4 class="portfolio-projects--title">Project Name</h4>
-                  <p class="portfolio-projects--desc">Short Description of Project</p>
-                  <button class="btn btn-rounded portfolio-projects--btn">View Project</button>
+                  <h4 class="portfolio-projects--title">Task Timer</h4>
+                  <p class="portfolio-projects--desc">A Pomodoro clock timer with a task list integration</p>
+                  <p class="portfolio-projects--desc">Uses: Javascript, JQuery, Bootstrap</p>
+                  <a class="btn btn-rounded portfolio-projects--btn" href="http://sonorangirl.github.io/Task-Timer/" role="button">View Project</a>
                 </div>
                 <div class="col-sm-7 text-center pull-right-sm"><!--flipped on small, unflipped on large-->
-                  <img class="img-rounded portfolio-projects--image" src="https://placekitten.com/g/350/250">
+                  <img class="portfolio-projects--image" src="img/slice-timer.png">
                 </div>
               </div>
             </div>
@@ -135,24 +138,26 @@
             <div class="col-lg-6"> <!--1st side project -->
               <div class="row"> 
                 <div class="col-sm-5 text-center">
-                  <h4 class="portfolio-projects--title">Project Name</h4>
-                  <p class="portfolio-projects--desc">Short Description of Project</p>
-                  <button class="btn btn-rounded portfolio-projects--btn">View Project</button>
+                  <h4 class="portfolio-projects--title">A Lot Like Life</h4>
+                  <p class="portfolio-projects--desc">A blog I made for documenting my sister and I's travels</p>
+                  <p class="portfolio-projects--desc">Uses: Wordpress w/adapted theme, PHP</p>
+                  <a class="btn btn-rounded portfolio-projects--btn" href="#" role="button">View Project</a>
                 </div>
                 <div class="col-sm-7 text-center">
-                  <img class="img-rounded portfolio-projects--image" src="https://placekitten.com/g/350/250">
+                  <img class="img-rounded portfolio-projects--image" src="img/slice-default.png">
                 </div>
               </div>
             </div>
             <div class="col-lg-6"> <!--2nd side project -->
               <div class="row"> 
                 <div class="col-sm-5 text-center pull-right-sm"><!--flipped on small, unflipped on large-->
-                  <h4 class="portfolio-projects--title">Project Name</h4>
-                  <p class="portfolio-projects--desc">Short Description of Project</p>
-                  <button class="btn btn-rounded portfolio-projects--btn">View Project</button>
+                  <h4 class="portfolio-projects--title">Christina Deloma</h4>
+                  <p class="portfolio-projects--desc">A blog and portfolio site for a local daytime tv show personality</p>
+                  <p class="portfolio-projects--desc">Uses: Wordpress w/custom theme, PHP, Foundation</p>
+                  <a class="btn btn-rounded portfolio-projects--btn" href="http://christinadeloma.com/" role="button">View Project</a>
                 </div>
                 <div class="col-sm-7 text-center pull-right-sm"><!--flipped on small, unflipped on large-->
-                  <img class="img-rounded portfolio-projects--image" src="https://placekitten.com/g/350/250">
+                  <img class="img-rounded portfolio-projects--image" src="img/slice-deloma.png">
                 </div>
               </div>
             </div>
