Updated portfolio section and links

--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
                   <a class="btn btn-rounded portfolio-projects--btn" href="http://sonorangirl.github.io/Task-Timer/" role="button">View Project</a>
                 </div>
                 <div class="col-sm-7 text-center pull-right-sm"><!--flipped on small, unflipped on large-->
-                  <img class="portfolio-projects--image" src="img/slice-timer.png">
+                  <img class="portfolio-projects--image" src="img/slice-task-timer.png">
                 </div>
               </div>
             </div>
@@ -138,26 +138,26 @@
             <div class="col-lg-6"> <!--1st side project -->
               <div class="row"> 
                 <div class="col-sm-5 text-center">
-                  <h4 class="portfolio-projects--title">A Lot Like Life</h4>
-                  <p class="portfolio-projects--desc">A blog I made for documenting my sister and I's travels</p>
-                  <p class="portfolio-projects--desc">Uses: Wordpress w/adapted theme, PHP</p>
-                  <a class="btn btn-rounded portfolio-projects--btn" href="#" role="button">View Project</a>
+                  <h4 class="portfolio-projects--title">Whats the Weather</h4>
+                  <p class="portfolio-projects--desc">A weather app to check current weather conditions.</p>
+                  <p class="portfolio-projects--desc">Uses: Javascript, Jquery, APIs, Bootstrap</p>
+                  <a class="btn btn-rounded portfolio-projects--btn" href="https://sonorangirl.github.io/Weather/" role="button">View Project</a>
                 </div>
                 <div class="col-sm-7 text-center">
-                  <img class="img-rounded portfolio-projects--image" src="img/slice-default.png">
+                  <img class="img-rounded portfolio-projects--image" src="img/weather-slice.png">
                 </div>
               </div>
             </div>
             <div class="col-lg-6"> <!--2nd side project -->
               <div class="row"> 
                 <div class="col-sm-5 text-center pull-right-sm"><!--flipped on small, unflipped on large-->
-                  <h4 class="portfolio-projects--title">Christina Deloma</h4>
-                  <p class="portfolio-projects--desc">A blog and portfolio site for a local daytime tv show personality</p>
-                  <p class="portfolio-projects--desc">Uses: Wordpress w/custom theme, PHP, Foundation</p>
-                  <a class="btn btn-rounded portfolio-projects--btn" href="http://christinadeloma.com/" role="button">View Project</a>
+                  <h4 class="portfolio-projects--title">Simon Game</h4>
+                  <p class="portfolio-projects--desc">A simple recreation of the 80s game Simon.</p>
+                  <p class="portfolio-projects--desc">Uses: Javascript, Sass, JQuery</p>
+                  <a class="btn btn-rounded portfolio-projects--btn" href="https://sonorangirl.github.io/Simon-Game/" role="button">View Project</a>
                 </div>
                 <div class="col-sm-7 text-center pull-right-sm"><!--flipped on small, unflipped on large-->
-                  <img class="img-rounded portfolio-projects--image" src="img/slice-deloma.png">
+                  <img class="img-rounded portfolio-projects--image" src="img/slice-simon.png">
                 </div>
               </div>
             </div>
